--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ version: 2
 name: Zehao Lu
 title: M.Sc Artificial Intelligence, Utrecht University
 email: com3dian@outlook.com
-website: www.github.com/com3dian.github.io
+website: https://com3dian.github.io/
 
 # Dark Mode (true/false/never)
 darkmode: true
@@ -62,7 +62,7 @@ content:
           caption: 2021 - 2023, Utrecht, Netherlands
           sub_title: MSc Artificial Intelligence
           quote: >
-
+            test
           description: | # this will include new lines to allow paragraphs
             Courses: Machine Learning for Human Vision and Language, Advanced Machine Learning, Methods in AI Research, Computer Vision, Natural Language Processing, Data Intensive System, Computational Arguentation, Evolutionary Computing
 
@@ -72,17 +72,15 @@ content:
           caption: 2016 - 2020, Peking, China
           sub_title: BSc Statistics
           quote: >
-
+            test
           description: | # this will include new lines to allow paragraphs
-            During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-            I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+            Courses: Introduction to Computation, Data Structure and Algorithm, Mathematical Analysis, Linear Algebra, Mathematical Statistics, Probability Theory, Applied Regression Theory, Machine Learning, Statistical Learning, Deep learning, Introduction to Numerical Analysis, Graph Theory
 
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
+        title: ML6
         link: boringcompany.com
         # link_text: boringcompany.com
         sub_title: Senior Network System Administrator
@@ -91,20 +89,6 @@ content:
           Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
             Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
-
-  - title: Education # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        title: Harvard University
-        caption: 2010 - 2013
-        sub_title: BSc Computer Science
-        quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
-        description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
 
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
