--- a/_config.yml
+++ b/_config.yml
@@ -47,9 +47,7 @@ linkedin_username: Zehao Lu
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Zehao and I'm a senior network system administrator.
-  As well as administrating systems I also have experience making software and web apps.
-  I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, my name's Zehao and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
 
   I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
 
@@ -72,7 +70,7 @@ content:
           caption: 2016 - 2020, Peking, China
           sub_title: BSc Statistics
           quote: >
-            test
+            Best Univeristy in China.
           description: | # this will include new lines to allow paragraphs
             Courses: Introduction to Computation, Data Structure and Algorithm, Mathematical Analysis, Linear Algebra, Mathematical Statistics, Probability Theory, Applied Regression Theory, Machine Learning, Statistical Learning, Deep learning, Introduction to Numerical Analysis, Graph Theory
 
