--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Brett Harris
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+name: Zehao Lu
+title: M.Sc Artificial Intelligence, Utrecht University
+email: com3dian@outlook.com
+website: https://com3dian.github.io/
 
 # Dark Mode (true/false/never)
 darkmode: false
