--- a/_config.yml
+++ b/_config.yml
@@ -48,11 +48,11 @@ linkedin_username: zehao-lu-93923a146
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi I'm a graduate student major in AI. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi I'm a graduate student major in AI. I'm also a open source lover.
 
   I am most skilled in: <mark>R</mark> programming language and <mark>C</mark>
 
-  Actively learning <mark>C# for Unity<mark>.
+  Actively learning <mark>C#<mark> for Unity.
 
 content:
   - title: Education # Title for the section
@@ -60,14 +60,14 @@ content:
     content:
       - layout: left
         title: Utrecht University
-        caption: 2010 - 2013
-        sub_title: BSc Computer Science
+        caption: 2021 - 2023
+        sub_title: MSc Artificial Intelligence
         quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
+          Founded in 1636, Utrecht University is internationally recognized for its high-quality education and research, and it consistently ranks among the top universities in Europe.
         description: | # this will include new lines to allow paragraphs
           During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
 
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+
 
       - layout: left
         title: Peking University
@@ -84,15 +84,42 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
+        title: ML6
+        link: https://www.ml6.eu/
         # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
+        sub_title: Machine Learning Intern
+        caption: Jan 2023 - Present
         quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+          Assisting companies in leveraging AI to generate business outcomes by offering AI-related services.
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+           The objective of this graduate internship project is to implement an AI model capable of:
+
+             - Analyze a research paper in (editable) .pdf form and extract meaningful content as much as possible;
+
+             - Abstarctively summarizes the extracted contents(mainly text, but could also include tables, pictures, and formulas) and construct the knowledge graph;
+
+             - Generate a slide explaining the paper accordingly. The slide can be used in a presentation or to help understand the original paper;
+
+          Other words: fine tune a large language model for text summarization using Google cloud platform.
+
+      - layout: left
+        title: ML6
+        link: https://www.ml6.eu/
+        # link_text: boringcompany.com
+        sub_title: Machine Learning Intern
+        caption: Sep 2022 - Dec 2022
+        quote: >
+          Assisting companies in leveraging AI to generate business outcomes by offering AI-related services.
+        description: | # this will include new lines to allow paragraphs
+          Research similarity metrics(Wasserstein distance) and contribute to python open-source libraries.
+
+            - Implement the Wasserstein distance metric between distributions in python.
+
+            - Contribute to open-source communities such as Scipy.
+
+            - Apply the Wasserstein metric on the client's data for anomaly detection.
+
+          Other words: suggest a [multi dimensional wasserstein_distance function](https://github.com/scipy/scipy/issues/17290) in Scipy and start a PR.
 
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
