--- a/_config.yml
+++ b/_config.yml
@@ -48,11 +48,11 @@ linkedin_username: zehao-lu-93923a146
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi I'm a graduate student major in AI. I'm also a open source lover.
+  Hi I'm a graduate student major in AI. I have experiences in popular ML/DL libraries includes pytorch, tensorflow, . I'm also a open source lover.
 
-  I am most skilled in: <mark>R</mark> programming language and <mark>C</mark>
+  I am also skilled in: <mark>R</mark> programming language and <mark>C</mark>
 
-  Actively learning <mark>C#<mark> for Unity.
+  Actively learning <mark>C#</mark> for Unity.
 
 content:
   - title: Education # Title for the section
@@ -63,9 +63,10 @@ content:
         caption: 2021 - 2023
         sub_title: MSc Artificial Intelligence
         quote: >
-          Founded in 1636, Utrecht University is internationally recognized for its high-quality education and research, and it consistently ranks among the top universities in Europe.
+          Founded in 1636, Utrecht University is internationally recognized for
+          its high-quality education and research, and it consistently ranks among the top universities in Europe.
         description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+          Courses: Machine Learning for Human Vision and Language, Advanced Machine Learning, Methods in AI Research, Computer Vision, Natural Language Processing, Data Intensive System, Computational Argumentation, Evolutionary Computing
 
 
 
@@ -76,9 +77,7 @@ content:
         quote: >
           Best Univeristy in China.
         description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
 
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
 
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
@@ -148,7 +147,7 @@ content:
     layout: text
     content: | # this will include new lines to allow paragraphs
       Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - Rock climbing
+      - Football
       - Gaming
       - Knitting
       - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
