--- a/_config.yml
+++ b/_config.yml
@@ -53,8 +53,9 @@ about_content: | # this will include new lines to allow paragraphs
   processing tools like <mark> Apache Spark</mark>(pyspark). I'm also a open
   source lover.
 
-  My interests includes NLP/NLG, LLM, reinforcement learning, AI4science
-  and AIops.
+  My interests includes Natural Language Processing(NLP)/Natural Language
+  Generation(NLG), Large Language Model(LLM), Reinforcement Learning(RL), AI4science
+  and (AI for IT Operations)AIops.
 
   I am mostly sklled in <mark>Python</mark>. I am also skilled in:
   <mark>R</mark> programming language and <mark>C</mark>. I would like to try
@@ -75,7 +76,7 @@ content:
           its high-quality education and research, and it consistently ranks
           among the top universities in Europe.
         description: | # this will include new lines to allow paragraphs
-          Courses: Machine Learning for Human Vision and Language,
+          *Courses*: Machine Learning for Human Vision and Language,
           Advanced Machine Learning, Methods in AI Research, Computer Vision,
           Natural Language Processing, Data Intensive System,
           Computational Argumentation, Evolutionary Computing
@@ -85,11 +86,11 @@ content:
       - layout: left
         title: Peking University
         caption: 2010 - 2013
-        sub_title: BSc Computer Science
+        sub_title: BSc Mathematics
         quote: >
           Best Univeristy in China.
         description: | # this will include new lines to allow paragraphs
-          Courses: Introduction to Computation, Data Structure and Algorithm,
+          *Courses*: Introduction to Computation, Data Structure and Algorithm,
           Mathematical Analysis, Linear Algebra, Mathematical Statistics,
           Probability Theory, Applied Regression Theory, Machine Learning,
           Statistical Learning, Deep learning, Introduction to Numerical Analysis,
@@ -102,11 +103,12 @@ content:
         title: ML6
         link: https://www.ml6.eu/
         # link_text: boringcompany.com
-        sub_title: Machine Learning Intern
+        sub_title: Machine Learning Intern · Internship
         caption: Jan 2023 - Present
         quote: >
           Assisting companies in leveraging AI to generate business outcomes by
-          offering AI-related services.
+          offering AI-related services. I worked with [ NLP
+          chapter](https://www.ml6.eu/chapters/nlp-chapter).
         description: | # this will include new lines to allow paragraphs
           The objective of this graduate internship project is to implement an
           AI model capable of:
@@ -128,11 +130,11 @@ content:
         title: ML6
         link: https://www.ml6.eu/
         # link_text: boringcompany.com
-        sub_title: Machine Learning Intern
+        sub_title: Machine Learning Intern · Internship
         caption: Sep 2022 - Dec 2022
         quote: >
           Assisting companies in leveraging AI to generate business outcomes by
-          offering AI-related services. I was in the [structure data
+          offering AI-related services. I worked with [structure data
           team](https://www.ml6.eu/chapters/structured-data).
         description: | # this will include new lines to allow paragraphs
           Research similarity metrics(Wasserstein distance) and contribute to
@@ -154,10 +156,11 @@ content:
         title: 4Paradigm
         link: https://en.4paradigm.com/
         # link_text: boringcompany.com
-        sub_title: Machine Learning Engineer(one year contract)
-        caption: Sep 2020 - Sep 2021
+        sub_title: Machine Learning Engineer(one year contract) · Full-time
+        caption: Aug 2020 - Aug 2021
         quote: >
-
+          Developing Data center and modern machine learning database. I worked
+          in the AI team of the time serial data center development department.
         description: | # this will include new lines to allow paragraphs
           Developing AI algorithms for IT Operations
             - Developed an algorithm, Kmeans over time serial data, for
@@ -167,7 +170,25 @@ content:
             - Applied DeepAR and Prophet algorithm on time series forecasting;
             - Applied Isolation Tree algorithm on anomaly detection task.
 
-          Other words:
+          Other words: design, test and apply algorithms on time serial data.
+
+      - layout: left
+        title: BMW China
+        link: https://www.bmw.com.cn/
+        # link_text: boringcompany.com
+        sub_title: Machine Learning Intern
+        caption: Sep 2019 - Dec 2019 · 4 months
+        quote: >
+          Developing Data center and modern machine learning database. I worked
+          in the AI team of the time serial data center development department.
+        description: | # this will include new lines to allow paragraphs
+          Improving machine learning system for risk assessment
+            - Data discovery and building predictive, prescriptive models
+            utilizing machine learning algorithms supported by strong
+            statistical theory;
+            - Risk analysis of financial loans given to customers.
+
+          Other words: design, test and apply algorithms on time serial data.
 
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
