--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ linkedin_username: zehao-lu-93923a146
 
 # About Section
 # about_title: About Me
-about_profile_image: images/profile.jpg
+about_profile_image: images/profile.png
 about_content: | # this will include new lines to allow paragraphs
   Hi I'm a graduate student major in AI. I possess robust mathematical and
   statistical skills, along with a comprehensive comprehension of both the
@@ -204,7 +204,7 @@ content:
         link: github.com/com3dian/nomodetect/
         # link_text: Project Website
         additional_links:
-          - title:  sproogen/modern-resume-theme
+          - title:  com3dian/nomodetect
             icon: fab fa-github
             url: github.com/com3dian/nomodetect/
           # - title:  Github page for project (eg. sproogen/modern-resume-theme)
@@ -213,7 +213,9 @@ content:
         quote: >
 
         description: | # this will include new lines to allow paragraphs
-          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+          I implement this program in order to detect the precise coordinates of
+          the scales in nomogram images, which is widely used in medical research
+          papers.
 
 
 
@@ -226,8 +228,7 @@ content:
       - Knitting
       - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
 
-      Look at this cool image
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
+      Look at this cool image ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
 
 # Footer
 footer_show_references: true
