--- a/_config.yml
+++ b/_config.yml
@@ -226,9 +226,9 @@ content:
       - Football
       - Gaming
       - Knitting
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+      - Play with AI art
 
-      Look at this cool image ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
+      Look at this cool image ![Trees](/images/landscape-trees.jpg)
 
 # Footer
 footer_show_references: true
